Fix boardroom bottom getting cut off

--- a/ui/src/app/components/boardroom/boardroom.component.scss
+++ b/ui/src/app/components/boardroom/boardroom.component.scss
@@ -4,6 +4,7 @@
   row-gap: 20px;
   margin-bottom: 0;
   color: var(--theme-text);
+  padding-bottom: 12px;
 
   height: auto;
   max-height: calc(100dvh - 40px);
